# capital-group-case-study

./: .gitignore  README.md  config.yaml  pyproject.toml
data/cache/: embeddings.npz  embeddings_meta.json
data/cache/articles/: 0.json  104.json  105.json  107.json  332.json  334.json  340.json  342.json  392.json  394.json  90.json  91.json  93.json  96.json  97.json  99.json  _index.json
data/cache/eval_articles/: 4-trends-could-power-industrial-renaissance.json  air-travel-taking-off.json  dividend-rotation-inflation.json  game-on-future-media.json  inflation-pricing-power.json  market-volatility-long-term-opportunity.json  new-reality-investors-5-major-shifts.json  rob-lovelace-all-weather-investing.json  us-midterm-elections-will-house-flip.json  why-fed-behind-curve.json
outputs/: disclosure_url_audit.md  eval_20260518T231845Z.csv  eval_20260518T231845Z.md  eval_20260518T232813Z.csv  eval_20260518T232813Z.md  eval_20260519T172959Z.csv  eval_20260519T172959Z.md  eval_20260519T202719Z.csv  eval_20260519T202719Z.md  gen_20260518T221619Z_posts.csv  gen_20260518T221619Z_posts.xlsx  gen_20260518T221619Z_trace.jsonl  gen_20260518T223759Z_posts.csv  gen_20260518T223759Z_posts.xlsx  gen_20260518T223759Z_trace.jsonl  gen_20260518T232812Z_trace.jsonl  gen_20260519T180346Z_trace.jsonl  gen_20260519T202718Z_trace.jsonl  gen_20260519T234024Z_trace.jsonl  one_pager.txt  style_audit.json  style_audit.md
src/capgroup/: cli.py  gen.py  judge.py  retrieval.py
src/capgroup/eval/: cli.py  holdout.py
src/capgroup/pregen/: disclosure_urls.py  embed.py  fetch_articles.py  (+1 more)
