[project]
name = "capital-group-case-study"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.102.0",
    "beautifulsoup4>=4.14.3",
    "numpy>=2.4.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "ruamel-yaml>=0.19.1",
    "tqdm>=4.67.3",
    "trafilatura>=2.0.0",
    "typer>=0.25.1",
    "voyageai>=0.3.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[project.scripts]
capgroup-gen = "capgroup.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capgroup"]

